# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rmbyext"
version = "1.0.0"
description = "recursively removes all files of given extension(s)"
readme = "README.md"
authors = [{ name = "WemaDevOps", email = "wemadevops@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: GPL-3.0 License",
    "Programming Language :: Python :: 3",
]
keywords = []
dependencies = []
requires-python = ">=3.8"

[project.optional-dependencies]
dev = ["pip-tools"]

[project.urls]
Homepage = "https://github.com/WemaDev/docker"

[project.scripts]
rmbyext = "rmbyext:main"
